# HHE-protocol

./: CMakeLists.txt  README.md
protocols/: HHE-protocol.cpp  mything.cpp
src/: Hash.cpp  HomomorphicEnc.cpp  HybridHomomorphicEnc.cpp  PublicKeyEnc.cpp  SEAL_Cipher.h  SignatureScheme.cpp  SymmetricCipher.cpp  pasta_3_plain.h  sealhelper.h
src/ms-gsl_x64-windows/: CONTROL
src/ms-gsl_x64-windows/share/Microsoft.GSL/: Microsoft.GSLConfig.cmake
src/ms-gsl_x64-windows/share/ms-gsl/: vcpkg.spdx.json  vcpkg_abi_info.txt
src/seal_x64-windows/: CONTROL
src/seal_x64-windows/include/SEAL-4.1/seal/util/: config.h
src/seal_x64-windows/share/seal/: SEALConfig.cmake  SEALConfigVersion.cmake  SEALTargets-debug.cmake  SEALTargets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
